# sample-multi-agent-builder-bedrock-crewai

./: .gitignore  Dockerfile  README.md  cdk.context.json  cdk.json  docker-compose.yml  generate-config.js  package-lock.json  package.json  tsconfig.json
.devcontainer/: devcontainer.json
agents-api/: Dockerfile  main.py  pyproject.toml
agents-api/tools/: __init__.py
agents-api/tools/code_interpreter/: code_interpreter.py
agents-api/tools/image_generator/: image_generator.py
lambdas/: add-agent.py  add-mission.py  add-task.py  delete-agents.py  delete-missions.py  delete-task.py  get-agents.py  get-missions.py  get-tasks.py  put-agent.py  put-mission.py
lib/: multi-agent-project-stack.ts  multi-agent-toolchain-stack.ts  multi-agent-toolchain-stages.ts
ui/: .gitignore  package-lock.json  package.json
ui/src/: App.js  App.jsx
ui/src/components/: agent-page.jsx  agents-page.jsx  code-block.jsx  common-components.tsx  create-agent-page.jsx  create-mission-page.jsx  create-task-page.jsx  data.jsx  examples-page.jsx  home-page.jsx  image-viewer.jsx  mission-page.jsx  missions-page.jsx  navigation.tsx  notifications.tsx  server.jsx  tasks-list.jsx
